# UnityExtrator

./: .gitignore  README.md  description.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  preview.rs  unity.rs
src-tauri/src/unity/: commands.rs  dto.rs  error.rs  loaded_object.rs  loader.rs  utils.rs
src-tauri/src/unity/commands/: export.rs  import.rs  preview.rs
src/Page/: Main.vue  Preview.vue
src/components/: ExpandListItem.vue  ExpandableList.vue  HelloWorld.vue  LeftInfoList.vue  Main.vue  MainPage.vue  TopBtnBar.vue
src/dto/: expandable.ts
src/router/: router.ts
src/tauri_pack/: export.ts  load_unity.ts  pack.ts  preview.ts
