[package]
name = "unity-extractor"
version = "0.1.1"
description = "A Tauri App"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
license = "AGPL"
repository = "https://github.com/UnityExtractor-rs/UnityExtrator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unity_rs = { version =  "0.1.0",git = "https://github.com/Goodjooy/unity-rs.git" ,rev = "3c516b5" }
once_cell = "1.18.0"
image = "0.24.7"
bytes = "1.4.0"
base64 = "0.21.2"
dashmap = "5.5.0"
thiserror = "1.0.44"
uuid = { version = "1.4.1", features = ["v5", "serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
